# Signal_proc

./: .gitignore  CMakeLists.txt  test.csv  wave_gen_main.cpp
inc/: Complex.h  Complex_C.h  Complex_P.h  filter.h  fourier_transform.h  wave_gen.h
mains/: filter.cpp  filter_main.cpp  fourier_transform_main.cpp  wave_gen_main.cpp
outputs/: .gitignore
src/: Complex.cpp  Complex_C.cpp  Complex_P.cpp  fourier_transform.cpp  wave_gen.cpp
